<resources>
    <string name="app_name">Bandmates</string>
    <string name="title_activity_maps">Map</string>
    <string name="bandmate_contact">Contact</string>
    <string name="bandmate_detail">Details</string>
    <string name="content_description_user_avatar">User Avatar</string>
    <string name="dialog_bandmate_preview_opening_error">Something went wrong opening bandmate preview..</string>
    <string name="bandmate_contact_email_subject">Hi from Bandmates!!</string>
    <string name="bandmate_age">%1d years old</string>
    <string name="bandmate_detail_location_label">Location</string>
    <string name="bandmate_details_age_label">Age</string>
    <string name="bandmate_details_about_label">About me</string>
    <string name="bandmate_profile_title">Bandmate Profile</string>
    <string name="random_data_title">Let\'s add some new friends!</string>
    <string name="generate_random_data_message">Do you want to generate %1d random Bandmates??</string>
    <string name="yes_please">Yes, please</string>
    <string name="no_thanks">No, thanks</string>
    <string name="generating_random_data">Generating %1d new Bandmates!</string>
    <string name="your_location">Your Location</string>
    <string name="location_not_available">Bandmates cannot access your location!</string>
    <string name="no_result">No results available</string>
    <string name="waiting_location">Waiting for Location</string>
    <string name="updating">updating data …</string>
    <string name="content_description_instrument_banner">Banner image of the instrument</string>
    <string name="near_you_50_km_radius">near you (50 km radius)</string>
    <string name="logout">Logout</string>
    <string name="map_search">Map Search</string>
    <string name="my_profile">My Profile</string>
    <string name="conversations">Conversations</string>
    <string name="profile">Profile</string>
    <string name="generate_data">Generate Data</string>
    <string name="settings">Settings</string>
    <string name="content_desription_app_logo_image">App logo image</string>
    <string name="done">Done!</string>
    <string name="available_soon">Will be available soon!</string>
    <plurals name="bandmate_search_total_result">
        <item quantity="one">%d BANDMATE</item>
        <item quantity="other">%d BANDMATES</item>
    </plurals>
</resources>
