<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_profile"
        android:icon="@drawable/ic_person_secondary_24dp"
        app:showAsAction="ifRoom"
        android:title="@string/profile">
        <menu xmlns:android="http://schemas.android.com/apk/res/android">
            <item android:id="@+id/menu_profile_popup_settings"
                android:title="@string/settings" />
            <item android:id="@+id/menu_profile_popup_logout"
                android:title="@string/logout"/>
        </menu>
    </item>

    <item
        android:id="@+id/menu_profile_login"
        android:icon="@drawable/ic_person_primary_24dp"
        app:showAsAction="ifRoom"
        android:title="@string/profile">
    </item>

    <item
        android:id="@+id/menu_profile_populatedata"
        android:icon="@drawable/ic_group_add_secondary_24dp"
        app:showAsAction="ifRoom"
        android:title="@string/generate_data">
    </item>
</menu>