<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/dialog_bandmate_preview_avatar"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/content_description_user_avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_bandmate_preview_name"
        app:srcCompat="@drawable/ic_person_outline_black_24dp" />

    <TextView
        android:id="@+id/dialog_bandmate_preview_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Thom Yorke" />

    <TextView
        android:id="@+id/dialog_bandmate_preview_instrument"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toStartOf="@+id/dialog_bandmate_preview_avatar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_bandmate_preview_name"
        tools:text="Singer" />

    <TextView
        android:id="@+id/dialog_bandmate_preview_age"
        android:layout_width="0dp"
        android:layout_height="18dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        app:layout_constraintEnd_toStartOf="@+id/dialog_bandmate_preview_avatar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_bandmate_preview_instrument"
        tools:text="50 years old" />

    <TextView
        android:id="@+id/dialog_bandmate_preview_location"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        app:layout_constraintEnd_toStartOf="@+id/dialog_bandmate_preview_avatar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_bandmate_preview_age"
        tools:text="Oxford UK" />

    <Button
        android:id="@+id/dialog_bandmate_preview_button_contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/bandmate_contact"
        app:layout_constraintEnd_toStartOf="@+id/dialog_bandmate_preview_button_details"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_bandmate_preview_avatar" />

    <Button
        android:id="@+id/dialog_bandmate_preview_button_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/bandmate_detail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/dialog_bandmate_preview_button_contact"
        app:layout_constraintTop_toBottomOf="@+id/dialog_bandmate_preview_avatar" />
</android.support.constraint.ConstraintLayout>